# gallery

./: .env.sample  compose.override.yaml  compose.yaml
services/auth/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/auth/src/: main.py
services/auth/src/alembic/: env.py
services/auth/src/alembic/versions/: 1250b5ff06f6_init_table_users.py  192db30b56b4_add_admin.py  3947e5b5f2e6_add_unique_columns.py  462161efa2d8_init_values.py  72d19721c105_init_tables.py  bf743ab4841d_init_tables.py  c9082a0c2901_init_tables.py
services/auth/src/api/v1/endpoints/: auth.py  registration.py  role.py  user.py
services/auth/src/api/v1/models/: auth.py  registration.py  user.py
services/auth/src/core/: config.py  superuser.py
services/auth/src/dependences/: httpx.py  jwt.py  postgres.py  redis.py
services/auth/src/models/: enums.py  user.py  users.py
services/auth/src/services/: auth.py  exceptions.py  init.py  role.py  user.py
services/gallery/: Dockerfile  pyproject.toml
services/gallery/src/: main.py
services/gallery/src/api/v1/endpoints/: gallery.py  user.py
services/gallery/src/api/v1/models/: photos.py
services/gallery/src/core/: config.py
services/gallery/src/db/: minio.py
services/gallery/src/dependences/: auth.py  httpx.py  token.py
services/gallery/src/dependences/auth/: auth.py
services/gallery/src/services/: photos.py
services/minio/: Dockerfile
services/nginx/: Dockerfile
services/nginx/conf/: server.conf
