[tool.poetry]
name = "gallery"
version = "0.1.0"
description = ""
authors = ["None <none@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pydantic-settings = "^2.9.1"
minio = "^7.2.15"
async-fastapi-jwt-auth = "^0.6.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"